kubernetes/immich/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    istio.io/dataplane-mode: ambient
