kubernetes/immich/valkey.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      labels:
        app: immich-valkey
    spec:
      nodeSelector:
        kubernetes.io/hostname: home-server
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9.1-alpine@sha256:a35428eba9043cc0b79dbe54100f0c92784f2de00ad09b01182bfb1c5c83d1bd
          ports:
            - name: valkey
              containerPort: 6379
          readinessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  selector:
    app: immich-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
